# rust-test

./: .gitignore  angular.json  package-lock.json  package.json  test.js  tsconfig.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: GLOBAL.rs  lib.rs  main.rs
src-tauri/src/command/: capture.rs  km_capture.rs  mod.rs  transfer.rs
src-tauri/src/keyboard_mouse/: mod.rs
src-tauri/src/service/: ffmpeg.rs  mod.rs  udp_server.rs  ws_server.rs
src-tauri/src/service/tcp/: tcp_client.rs  tcp_server.rs
src-tauri/src/streaming/: ffmpeg.rs  mod.rs  traits.rs  udp.rs  ws.rs
src-tauri/src/types/: mod.rs  stream_handle.rs
src-tauri/src/util/: km_detect.rs  mod.rs  zip.rs
src/app/: app.component.html  app.component.less  app.component.ts  app.config.ts  index.d.ts  share.module.ts
