[package]
name = "rust-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-hid = "0.4.3"
futures-lite = "2.6.0"
log = "0.4.27"
once_cell = "1.21.3"
get_if_addrs = "0.5.3"
scap = "0.0.8"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
tokio = { version = "1.46.1", features = ["full"] }
zip = "4.3.0"
tokio-tungstenite = "0.26.1"
anyhow = "1.0.98"
async-trait = "0.1.88"
lazy_static = "1.5.0"
futures = "0.3.31"
rdev = { git = "https://github.com/fufesou/rdev" }
core-graphics = "0.25.0"
core-foundation = "0.10.1"
objc = "0.2.7"
